service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-app
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: usuarios-app
  type: NodePort
